--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -6,7 +6,7 @@
     <p>
         I denna kursen skall vi lära oss programmera webbapplikationer på ett objektorienterat sätt med fokus på det arkitekturella designmönstret MVC. 
     </p>
-    <img class="sm-img" src="./img/php.png" alt="picture of small elephant on a laptop">
+    <img class="sm-img" src="{{ asset("img/php.png") }}" alt="picture of small elephant on a laptop">
     <p>
         
          <a href="https://github.com/dbwebb-se/mvc">Länk till github</a>
