--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,7 +14,7 @@
         Den är skapad av mig Andreas Nilsson (annt21) <br>
         Jag bor i ("på") jämjö och pluggar webprogrammering på BTH. 
     </p>
-    <img class="sm-img" src="./img/me.jpg" alt="me-picture">
+    <img class="sm-img" src="{{ asset("img/me.jpg") }}" alt="me-picture">
         <h2>Dagens datum: {{ today }}</h2>
         
     <div class="holder">
