--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block css %}
-            <link rel="stylesheet" href="css/app.css">
+            <link rel="stylesheet" href="{{ asset("css/app.css") }}">
         {% endblock css %}
 
     </head>
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <nav class="navbar">
-                <a href="{{ url("home") }}"> Index</a>
+                <a href="{{ url("home") }}"> Home</a>
                 <a href="{{ url("about") }}"> About</a>
                 <a href="{{ url("report") }}"> Report </a>
             </nav>
