--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,7 @@
                 <a href="{{ url("home") }}"> Home</a>
                 <a href="{{ url("about") }}"> About</a>
                 <a href="{{ url("report") }}"> Report </a>
+                <a href="{{ url("card-home") }}"> Card </a>
             </nav>
         </header>
 
