--- a/templates/card/shuffle.html.twig
+++ b/templates/card/shuffle.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Card{% endblock %}
+{% block title %}Shuffle{% endblock %}
 
 {% block body %}
 <h1>{{ title }}</h1>
@@ -15,7 +15,5 @@
   
     {% endfor %}
 </table>
-
-{# <p><a href="{{ link_to_roll }}">Roll the dice five times</a>.</p> #}
 
 {% endblock %}
