--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -10,7 +10,7 @@
 <p>More text and some links to other pages</p>
 <button><a href="{{ url("card-deck") }}"> Deck</a></button>
 <button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
-<button><a href="{{ url("home") }}"> Draw</a></button>
+<button><a href="{{ url("deck-draw") }}"> Draw</a></button>
 <button><a href="{{ url("home") }}"> Deal</a></button>
 <button><a href="{{ url("home") }}"> Deck2</a></button>
 
