--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -11,7 +11,7 @@
 <button><a href="{{ url("card-deck") }}"> Deck</a></button>
 <button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
 <button><a href="{{ url("deck-draw") }}"> Draw</a></button>
-<button><a href="{{ url("home") }}"> Deal</a></button>
+<button><a href="{{ url("deck-multiRoll", {numRolls: 5}) }}"> MultiDraw</a></button>
 <button><a href="{{ url("home") }}"> Deck2</a></button>
 
 {# <p><a href="{{ link_to_roll }}">Roll the dice five times</a>.</p> #}
