--- a/templates/card/draw.html.twig
+++ b/templates/card/draw.html.twig
@@ -5,6 +5,8 @@
 {% block body %}
 <h1>{{ title }}</h1>
 
+<form method="post">
+
 {% if draw is iterable %}
     <table class="deck-table">
         {% for suits in draw|batch(13) %}
@@ -18,8 +20,7 @@
 {% else %}
     <h2> Your card is: {{ draw }}</h2>
 {% endif %}
-<h4>
-   Number of cards left:  {{ count }}
-</h4>
-
+    <h4>
+    Number of cards left:  {{ count }}
+    </h4>
 {% endblock %}
