--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,6 +43,11 @@ body {
     background-color: lightgray;
 }
 
+.body {
+    margin-bottom: 2rem;
+   
+}
+
 .content {
     text-align: center;
 }
