--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,10 +24,11 @@
                 <a href="{{ url("card-home") }}"> Card </a>
             </nav>
         </header>
-
+        <div class="body">
         {% block body %}
         
         {% endblock %}
+        </div>
     </body>
     {% include "footer.twig" %}
     
