--- a/templates/card/card.html.twig
+++ b/templates/card/card.html.twig
@@ -6,7 +6,7 @@
 <h1>{{ title }}</h1>
 
 <table class="deck-table">
-    {% for suits in deck|batch(13, 'No item') %}
+    {% for suits in deck|batch(13) %}
         <tr>
             {% for cards in suits %}
                 <td>{{ cards }}</td>
