--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -5,14 +5,14 @@
 {% block body %}
 <h1>{{ title }}</h1>
 
-<p>Text about Cards.</p>
+<h3>Options for cards.</h3>
 
-<p>More text and some links to other pages</p>
+
 <button><a href="{{ url("card-deck") }}"> Deck</a></button>
 <button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
 <button><a href="{{ url("deck-draw") }}"> Draw</a></button>
 <button><a href="{{ url("deck-multiRoll", {numRolls: 5}) }}"> MultiDraw</a></button>
 <button><a href="{{ url("deck-deal",{numPlayer: 2, numCards: 5}) }}"> Deal</a></button>
-
+<button><a href="{{ url("card-deck2") }}"> Joker</a></button>
 
 {% endblock %}
