--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -7,12 +7,17 @@
 
 <h3>Options for cards.</h3>
 
+<div style="gap: 7px; display: flex;">
+    <button><a href="{{ url("card-deck") }}"> Deck</a></button>
+    <button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
+    <button><a href="{{ url("deck-draw") }}"> Draw</a></button>
+    <button><a href="{{ url("deck-multiRoll", {numRolls: 5}) }}"> MultiDraw</a></button>
+    <button><a href="{{ url("deck-deal",{numPlayer: 2, numCards: 5}) }}"> Deal</a></button>
+    <button><a href="{{ url("card-deck2") }}"> Joker</a></button>
+    <button><a href="{{ url("api-sort") }}"> Get/Sorted</a></button>
 
-<button><a href="{{ url("card-deck") }}"> Deck</a></button>
-<button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
-<button><a href="{{ url("deck-draw") }}"> Draw</a></button>
-<button><a href="{{ url("deck-multiRoll", {numRolls: 5}) }}"> MultiDraw</a></button>
-<button><a href="{{ url("deck-deal",{numPlayer: 2, numCards: 5}) }}"> Deal</a></button>
-<button><a href="{{ url("card-deck2") }}"> Joker</a></button>
-
+    <form method="post" action="{{ url("api-shuffle") }}">
+        <input type="submit" name="name" value="POST/Shuffle" /> 
+    </form>
+</div>
 {% endblock %}
