--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
                 <a href="{{ url("about") }}"> About</a>
                 <a href="{{ url("report") }}"> Report </a>
                 <a href="{{ url("card-home") }}"> Card </a>
+                <a href="{{ url("game-home") }}"> Game </a>
             </nav>
         </header>
         <div class="body">
