Inject Player end Deck into Game. Moved Game into /Cards

--- a/templates/game/start.html.twig
+++ b/templates/game/start.html.twig
@@ -22,5 +22,15 @@
     {# <form method="post" action="{{ url("api-shuffle") }}">
         <input type="submit" name="name" value="POST/Shuffle" /> 
     </form> #}
+
+    <div>
+        <p>
+        {% for player in players %}
+        <p>
+            Här
+        </p>
+     {% endfor %}
+        </p>
+    </div>
 </div>
 {% endblock %}
