--- a/templates/game/start.html.twig
+++ b/templates/game/start.html.twig
@@ -24,13 +24,29 @@
     </form> #}
 
     <div>
-        <p>
-        {% for player in players %}
-        <p>
-            Här
-        </p>
-     {% endfor %}
-        </p>
+        
+        {{ game.addScoreToPlayer(1, 5)}}
+        <h1> POINTS PLAYER 1 <br>
+            {{ game.getScoreForPlayer(2)}}
+        </h1>
+        
+        <h1>
+            POINTS BANK
+            <br>
+        {{ game.getScoreForPlayer(1)}}
+        </h1>
+    </div>
+    <div> TESTA DRA:
+        
+            <button>
+               
+                <a href="{{ url("game-start") }}"> Draw</a>
+            </button>
+        
+            {% for cards in player.cards %}
+                <td class="cards">{{cards}}</td>
+                {% endfor %}
+            
     </div>
 </div>
 {% endblock %}
