added check for bust

--- a/templates/game/start.html.twig
+++ b/templates/game/start.html.twig
@@ -7,21 +7,14 @@
 
 <h3>Game in progress</h3>
 
+{% if game.bust == false %}
+    
+
 <div style="gap: 7px; display: flex;">
     <p>
         Take card
     </p>
     <button><a href="{{ url("game-home") }}"> Stop</a></button>
-    {# <button><a href="{{ url("deck-shuffle") }}"> Shuffle</a></button>
-    <button><a href="{{ url("deck-draw") }}"> Draw</a></button>
-    <button><a href="{{ url("deck-multiRoll", {numRolls: 5}) }}"> MultiDraw</a></button>
-    <button><a href="{{ url("deck-deal",{numPlayer: 2, numCards: 5}) }}"> Deal</a></button>
-    <button><a href="{{ url("card-deck2") }}"> Joker</a></button>
-    <button><a href="{{ url("api-sort") }}"> Get/Sorted</a></button> #}
-
-    {# <form method="post" action="{{ url("api-shuffle") }}">
-        <input type="submit" name="name" value="POST/Shuffle" /> 
-    </form> #}
 
     <div>
         
@@ -41,4 +34,10 @@
             <td class="cards">{{cards}}</td>
     {% endfor %}
 </div>
+{% else %}
+
+<h1>GAME OVER MAN</h1>
+<button><a href="{{ url("game-home") }}"> Return</a></button>
+{% endif %}
+
 {% endblock %}
