--- a/templates/game/result.html.twig
+++ b/templates/game/result.html.twig
@@ -7,7 +7,7 @@
 
 <h3>Result</h3>
 <p>
-    This is Result
+    This is Result {{ end}}
 </p>
 <div style="gap: 7px; display: flex;">
     <button><a href="{{ url("game-home") }}"> Home</a></button>
