removed advice from home-screen, slow api

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -12,11 +12,11 @@
                 E-post: annt21@student.bth.se
             </p>
         </div>
-        <div class="fot-right">
+        {# <div class="fot-right">
             <p>
                 Advice from: https://api.adviceslip.com/advice
             </p>
-        </div>
+        </div> #}
     
     </div>
 </footer>
