--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -16,10 +16,10 @@
     <img class="sm-img" src="{{ asset("img/me.jpg") }}" alt="me-picture">
         <h2>Dagens datum: {{ today }}</h2>
 
-    <div class="holder">
+    {# <div class="holder">
         <div class="advice">
             <h3>Random advice of the day:</h3>  {{ advice }}
         </div>
-    </div>
+    </div> #}
 </div>
 {% endblock body %}
