--- a/templates/game/home.html.twig
+++ b/templates/game/home.html.twig
@@ -47,6 +47,7 @@
 </div>
 <div class="center">
     <button class="start-b"><a href="{{ url("game-start") }}"> Start</a></button>
+    <button class="start-b"><a href="{{ url("game-doc") }}"> Doc</a></button>
 </div>
 
 {% endblock %}
