--- a/templates/game/result.html.twig
+++ b/templates/game/result.html.twig
@@ -7,7 +7,7 @@
 <div class="center">
 <h1>{{ title }}</h1>
 <p>
-    Slutligt resultat {{ end}}
+    {{ end}}
 </p>
     <button><a href="{{ url("game-home") }}"> Tillbaka</a></button>
 </div>
