added db, table-Leaderboard, create-Post

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
                 <a href="{{ url("report") }}"> Report </a>
                 <a href="{{ url("card-home") }}"> Card </a>
                 <a href="{{ url("game-home") }}"> Game </a>
+                <a href="{{ url("app_leaderboard") }}"> Leaderboard </a>
             </nav>
         </header>
         <div class="body">
