--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -109,6 +109,25 @@
         </p>
         </p>
         <h4>Kmom04</h4>
+
+        <p>
+            Jag tycker det gick bra att skriva kode för att testa klasserna. Det påminnede mycket om det vi gjorde i pythonkursen. Det svåra är att veta vilka tester man ska köra. PHPUnit var trevligt att jobba med. Man fick bra feedback och överblick. Jag fick det inte att fungera med Composer men det fungerade i terminalen så jag körde på det. 
+        </p>
+        <p>
+            Jag lyckades ok med kodtäckningen, över 90% förutom på "Classes and Traits" där det fanns mer att önska.
+        </p>
+        <p>
+            Dom flesta klasserna var väldigt testbara. Den som inte var testbar var Game. Det största problemet var att jag valde att skapa en funktion (setGameState) som kör många andra funktioner. Jag valde att ha det så fär att det passade bra i mitt upplägg men i framtiden kan det vara bra att dela upp funktionerna lite mer.
+        </p>
+        <p>
+            Jag ändrade lite i koden, Jag hade implementerat en medtod för att ta bort kort i Hand. Men eftersom jag inte använde mig utav den så tog jag bort den helt. I övrigt så ändrade jag inget.
+        </p>
+        <p>
+            Jag kan nog ändå tycka att testbar kod är bra kod. Koden ska vara lätt att följa och saker ska bara göra en sak. Även värt att tänka på att man håller koden löst-kopplad och väl inkappslad.
+        </p>
+        <p>
+            Til: Tester är bra. Var noggrannare med att hålla funktioner och metoder till att bara göra en sak.
+        </p>
         <h4>Kmom05</h4>
         <h4>Kmom06</h4>
         <h4>Kmom10</h4>
