--- a/templates/leaderboard/create.html.twig
+++ b/templates/leaderboard/create.html.twig
@@ -36,7 +36,7 @@
             <div>
             <p >
                 <label for="textarea"  >Bio:
-                    <textarea id="textarea" name="bio" rows="8" cols="50"></textarea>
+                    <textarea id="textarea" name="bio" rows="8" cols="50" required></textarea>
                 </label>
             </p>
             </div>
