--- a/templates/leaderboard/index.html.twig
+++ b/templates/leaderboard/index.html.twig
@@ -8,13 +8,13 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/cygwin64/home/andre/dbwebb-kurser/mvc/me/report/src/Controller/LeaderboardController.php'|file_link(0) }}">src/Controller/LeaderboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/cygwin64/home/andre/dbwebb-kurser/mvc/me/report/templates/leaderboard/index.html.twig'|file_link(0) }}">templates/leaderboard/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="wrapper">
+
+
+        <a class="button" href="{{ url("leaderboard_show_all") }}"> Visa Alla</a>
+        <a class="button" href="{{ url("leaderboard-create") }}"> Lägg till Spelare</a>
+        <a class="button" href="{{ url("leaderboard-delete") }}"> Ta Bort Spelare</a>
+    </div>
+
 {% endblock %}
