Linting and added scrutinizer

--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -129,6 +129,38 @@
             Til: Tester är bra. Var noggrannare med att hålla funktioner och metoder till att bara göra en sak.
         </p>
         <h4>Kmom05</h4>
+        
+
+    {# 
+        Gick det bra att jobba igenom övningen med Symfony och Doctrine. Något särskilt du tänkte/reagerade på under övningen?
+
+        Berätta om din applikation och hur du tänkte när du byggde upp den. Tänkte du något speciellt på användargränssnittet? Gick det bra att jobba med ORM i CRUD eller vad anser du om det?
+
+        Berätta om du gjorde (delar av) extrauppgiften med användare och login.
+
+        Vad är din uppfattning om ORM så här långt och relatera gärna till andra sätt att jobba med applikationskod mot databaser?
+
+        Vilken är din TIL för detta kmom? #}
+        <p>
+            Jag tycker det gick bra att jobba igenom övningen. Den var bra skriven och lätt att följa.
+        </p>
+        <p>
+            För att spinna vidare på temat med kortspelet så valde jag att göra en leaderboard.<br>
+            Jag tänkte mest på att få in alla kraven. Användargränssnittet har mer att önska. tex bör delete inte vara baserad på id när man inte kan se spelarnas id någonstans( förutom i url:en). Ett  bättre alternativ hade nog varit att lägga en knapp bredvid spelarna när man visar upp alla.<br> Jag tycker det gick ok att jobba med CRUD. Det knepigaste är när man ska skicka med parametrar. Det blir lättare och lättare ju mer jag jobbar med det.<br>
+        </p>
+        <p>
+            i brist av tid så har jag inte gjort några extrauppgiften.
+        </p>
+        <p>
+            Jag tycker att det var ok att jobba med ORM. Det går rätt fort att sätta sig in i så jå jag kan förstå att det kan komma till användning i stora team där det kan effektivisera arbetssättet.<br> Dock tycker jag att man tappar kontrollen lite och att man bara får godta att saker fungerar. Tex så skrev jag fel namn när jag skulle skapa table i databasen och det är svårt att veta vart alla filer skapas som behöver ändras/tas bort.<br>
+            Jag föredrar att skriva SQL så att man har lite mer kontroll på databasen. 
+
+        </p>
+        <p>
+            TIL: Det finns många olika arbetssätt för samma saker. Kanske är det viktigaste bara att alla jobbar på samma sätt.
+        </p>
+
+        
         <h4>Kmom06</h4>
         <h4>Kmom10</h4>
     </div>
