--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,7 @@
                 <a href="{{ url("card-home") }}"> Card </a>
                 <a href="{{ url("game-home") }}"> Game </a>
                 <a href="{{ url("app_leaderboard") }}"> Leaderboard </a>
+                <a href="{{ url("metrics-home") }}"> Metrics </a>
             </nav>
         </header>
         <div class="body">
